# chaos

./: .cproject  .gitignore  .project  BUILD  CMakeLists.txt  CMakeSettings.json  ChangeLog.txt  Doxyfile  PORTING  anim.html  anim.sh
chaos/: CMakeLists.txt  arena.c  arena.h  casting.c  casting.h  chaos.c  chaos.h  computer.c  computer.h  creature.c  creature.h  cursor_defines.h  editname.c  editname.h  examine.c  examine.h  gamemenu.c  gamemenu.h  gfx.c  gfx.h  images.h  input.c  input.h  jWrite.c  jWrite.h  magic.c  magic.h  main.c  movement.c  movement.h  options.c  options.h  output.c  output.h  palettes.h  pathfinder.c  pathfinder.h  platform.h  players.c  players.h  (+17 more)
cmake/: CompilerFlags.cmake  DevkitARM.cmake  GBA.cmake  NDS.cmake
data/: spelldata.csv
gfx/: CMakeLists.txt
gfx/palette0/: elf.pcx  spell.pcx
gfx/palette1/: troll.pcx
gfx/palette4/: magic_fire.pcx
gfx/palette8/: fight.pcx  fire_anim.pcx
gfx/palettec/: chaosfont.pcx
lang/: CMakeLists.txt  chaos.pot  es.po  genpot.sh  poc2c.sh
locale/: es.po  template.pot
port/android/: AndroidManifest.xml  CMakeLists.txt  eclipse.cproject  eclipse.project  lint.xml  proguard-android.txt
port/android/jni/: Android.mk.in  Application.mk.in  chaos_jni.c  routines.c  screen.h  unused.c
port/android/res/layout/: main.xml
port/android/res/values/: dimens.xml  strings.xml
port/android/res/values-es/: strings.xml
port/android/res/xml/: preferences.xml
port/android/src/chaos/app/: ChaosActivity.java  ChaosView.java  FileHelperBackupAgent.java  KeyPreference.java  SetPreferencesActivity.java  VersionedBackupManager.java
port/ds/: CMakeLists.txt  input.c  main.c  routines.c  saves.c  soundfx.c  unused.c
port/dummy/: main.c  routines.c
port/gba/: CMakeLists.txt  input.c  main.c  platform.c  saves.c  screen.c  scroll.c  soundfx.c  sprites.c  text.c  vba.S  vba.h
port/linux/: CMakeLists.txt  chaos.appcache  cmdline.c  cmdline.h  emscripten.c  footer.html  header.html  library.js  main.c  manifest.webapp  module-pre.js  mypackage.webapp  platform.c  platform2.c  saves.c  screen.c  screen.h  scroll.c  sprites.c  sprites.h  utils.c  utils.h  winkeys.c  winkeys.h  winsound.c  winsound.h  wmhandler.c  wmhandler.h
sfx/: CMakeLists.txt  bin2h.cmake
tests/: CMakeLists.txt  arena_test_expected_0.txt  arena_test_expected_2.txt  arena_test_expected_3.txt  arena_test_expected_4.txt  arena_test_expected_5.txt  arena_test_expected_6.txt  order_table_test.c  parse_options_test.c  random_test.c  run_semi_auto_tests.sh  save_arena_test.c  save_globalstate_test.c  save_players_test.c  save_players_test_expected.txt  select_spell_test.c
tests/saves/: castle-cpu.txt  castle-tree-sleep-pop.txt  castle.txt  creature.txt  disbelieve-fail.txt  disbelieve-works-cpu.txt  disbelieve-works.txt  gooeyspread.txt  justice.txt  magic_fire-cpu.txt  magic_fire.txt  mbolt.txt  meditate-cpu.txt  meditate.txt  mutation.txt  mwood-cpu.txt  raisedead-cpu.txt  subversion-cpu.txt  turmoil-cpu.txt  turmoil.txt  wall.txt
tools/: alsa.supp  bootstrap.sh  create_source_tar.sh  download-deps.sh  emscripten-build.sh  emscripten-configure.sh  gensfx.py  genspellenum.py  gritwrapper.py  installd-run-log.sh  make-builds.sh  makedist.sh  prepare-android-build.sh  relative.sh  run-nds.sh  updatetranslate.sh
