cmake_minimum_required(VERSION 2.8)
project(Chaos NONE)

find_package(PythonInterp 2.6 REQUIRED)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
if(ANDROID)
    add_subdirectory(gfx)
    add_subdirectory(sfx)
    add_subdirectory(lang)
    add_subdirectory(chaos)
    add_subdirectory(port/android)
else()
    enable_language(C)
    include(CompilerFlags)
    include_directories(${CMAKE_CURRENT_BINARY_DIR})
    include_directories(${CMAKE_SOURCE_DIR})
    add_subdirectory(gfx)
    add_subdirectory(sfx)
    add_subdirectory(lang)

    if(GBA)
        add_subdirectory(port/gba)
    elseif(NDS)
        add_subdirectory(port/ds)
    else()
        add_subdirectory(port/linux)
        if(NOT EMSCRIPTEN)
            add_subdirectory(tests)
        else()
            set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-warn-absolute-paths")
        endif()
    endif()
    add_subdirectory(chaos)
endif()
